add 3D lobby background and adjust scratch card win probabilities

--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
       </p>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="shared.js"></script>
     <script src="lobby.js"></script>
+    <script src="lobby-3d.js"></script>
   </body>
 </html>
