refactor 3D slots initialization and update canvas element for rendering

--- a/slots.html
+++ b/slots.html
@@ -70,8 +70,8 @@
             <div class="payline-dot active" data-line="5" title="Line 5: Diagonal ↗"></div>
           </div>
           <div class="reels-container" id="reels-container">
-            <!-- 3D Canvas will be injected here, replacing the DOM Reels -->
-            <div id="slots-canvas-container" style="width: 100%; height: 100%;"></div>
+            <!-- 3D Canvas will be injected here -->
+            <canvas id="slots-canvas" style="width: 100%; height: 100%; display: block;"></canvas>
           </div>
         </div>
 
